Story 2-1: list areas
